# hr-ai-agent

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  config.py  database.py  llm_client.py  main.py  mock_llm.py  models.py  schemas.py
app/prompts/: __init__.py  interview_agent_prompt.md  interview_evaluate_prompt.md  interview_plan_prompt.md  jd_parse_prompt.md  (+4 more)
data/: sample_jd.md  sample_jd_medical_pm.md  sample_resume_1.md  sample_resume_2.md  sample_resume_medical_pm_strong.md  sample_resume_medical_pm_weak.md  scoring_rules.json  scoring_rules_ai_fullstack.json  scoring_rules_ai_pm.json  scoring_rules_ai_pm_lead.json  scoring_rules_ai_security.json  scoring_rules_algo_engineer.json  scoring_rules_backend.json  scoring_rules_cv.json  scoring_rules_data_analyst.json  scoring_rules_data_scientist.json  scoring_rules_fde.json  scoring_rules_llm_app.json  scoring_rules_medical_pm.json  scoring_rules_mlops.json  scoring_rules_nlp.json  scoring_rules_pentest.json  scoring_rules_sec_dev.json  scoring_rules_sec_ops.json  scoring_rules_sec_research.json  scoring_rules_workflow_engineer.json
docs/: case_study.md  demo_script.md  interview_pitch.md  prompt_design.md  retrospective.md  table_design.md  workflow_design.md
scripts/: generate_examples.py
tests/: conftest.py  test_admin.py  test_formatting.py  test_interview_flow.py  test_medical_pm.py  test_report_export.py  test_resume_extract.py  test_resume_score.py
web/: streamlit_app.py
(+35 files in other folders)
